[gd_scene load_steps=13 format=2]

[ext_resource path="res://Components/Buildings/Battery/Battery.gd" type="Script" id=1]
[ext_resource path="res://Components/Buildings/Battery/icon_white.png" type="Texture" id=2]
[ext_resource path="res://Components/TurretComponent/box.png" type="Texture" id=3]
[ext_resource path="res://Components/Healthbar/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/Progressbar/TimeoutProgress.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/Buildings/PowerSource/impulse.png" type="Texture" id=6]
[ext_resource path="res://Components/Buildings/Battery/RangeArea.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 18 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 127.004

[sub_resource type="Animation" id=5]
resource_name = "Impulse"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 0.33, 0.33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Battery" type="Area2D" groups=["PowerConsumer"]]
script = ExtResource( 1 )

[node name="Visual" type="Node2D" parent="."]

[node name="Block" type="Sprite" parent="Visual"]
position = Vector2( 9.53674e-07, 9.53674e-07 )
texture = ExtResource( 3 )

[node name="Icon" type="Sprite" parent="Visual/Block"]
modulate = Color( 1, 1, 1, 0.709804 )
position = Vector2( -1, -5 )
rotation = 0.00606842
scale = Vector2( 0.0598611, 0.0511349 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]

[node name="TimeoutProgress" parent="." instance=ExtResource( 5 )]
custom_styles/fg = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="RangeArea" type="Area2D" parent="." groups=["PowerSource"]]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Light2D")
anims/Impulse = SubResource( 5 )
anims/RESET = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 0.33

[node name="DistributionDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Turret_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Turret_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DistributionDelay" to="." method="_on_DistributionDelay_timeout"]
